Test/errors/err_unknown_type_arg_qualifier.cb
// `unique` and `alias` are the only admitted generic type-argument qualifiers.
import "list.cb";
class Res { int id = default; };

expect_error("unknown type qualifier 'borrow'; only 'unique' or 'alias' is allowed") {
    list<borrow Res*> bad = default;
}
